--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ body {
     font-size: 16px;
     font-weight: 300;
     overflow-x: hidden;
+    color: #fff;
 }
 
 
@@ -55,7 +56,8 @@ body {
 
 .navbar-dark .navbar-nav .nav-link:focus,
 .navbar-dark .navbar-nav .nav-link:hover,
-.navbar-dark .navbar-nav .nav-link:active {
+.navbar-dark .navbar-nav .nav-link:active,
+.navbar-dark .navbar-nav .nav-link.active {
     color: rgba(250, 250, 250, 0.75);
 }
 
@@ -131,14 +133,220 @@ h3 {
 /*Form Section*/
 
 #form {
-    margin: 3rem 2rem;
+    margin: 4rem 2rem;
     padding: 2rem 1.5rem;
+    border-radius: 12px;
+    background-color: #fff;
 }
 
 .contact {
-    background-color: seagreen;
+    background-image: url(../img/map-bcg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-#form {
-    background-color: #fff;
+.title {
+    font-weight: 600!important;
+}
+
+.form-control {
+    height: 3rem;
+    padding: 0.375rem 0.9rem;
+    font-size: 16px;
+    color: #201e1e;
+    border-radius: 25px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+#form .email-input {
+    position: relative;
+}
+
+#form.invalid .email-input::before {
+    content: "";
+    position: absolute;
+    background-image: url(../img/icon-error.svg) cover;
+    right: 12px;
+    top: 12px;
+    width: 24px;
+    height: 24px;
+    z-index: 1000;
+}
+
+.submit {
+    background: #606c30!important;
+    color: #fff;
+    border: none;
+    border-radius: 25px;
+    width: 8rem;
+}
+
+.submit:focus,
+.submit:hover,
+.submit:active {
+    background: #4b5a02!important;
+    font-size: 1.35rem;
+    width: 9rem;
+}
+
+.contact-footer {
+    margin-bottom: 0;
+    line-height: 1.0;
+    height: 60px;
+    color: #000;
+}
+
+.contact-footer a {
+    color: #000;
+    font-size: 11.5px;
+}
+
+
+/*Testimonial Section*/
+
+.col-md-12 {
+    height: 70vh;
+}
+
+h1 strong {
+    font-family: 'Playfair Display', serif;
+}
+
+.title-underline {
+    width: 200px;
+    height: 5px;
+    margin: 0 auto;
+    background: rgb(89, 131, 4)!important;
+}
+
+.testimonial-indicators li {
+    background-color: rgba(0, 0, 0, 0.7)!important;
+}
+
+.testimonial-indicators li:active,
+.testimonial-indicators li.active {
+    background-color: #606c30!important;
+}
+
+.testimonial-indicators {
+    bottom: -4rem;
+}
+
+.card-box {
+    margin: 1rem;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+    padding: 2rem 1.5rem;
+    height: 22rem;
+}
+
+.img-text p {
+    padding-top: 1rem;
+    color: #fff;
+}
+
+h4 {
+    color: rgba(250, 250, 250, 0.7);
+    padding-bottom: 1.2rem;
+    font-size: 18px;
+}
+
+.img-box {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 3px solid #606c30;
+    overflow: hidden;
+}
+
+.img-box img {
+    width: 100%;
+}
+
+
+/*Footer*/
+
+#footer {
+    background: #606c30;
+}
+
+.footer-box {
+    margin-top: 2rem;
+    font-size: 18px;
+}
+
+.footer-box p {
+    line-height: 1.5;
+}
+
+.footer-links li a {
+    color: #fff;
+}
+
+.footer-links li a:focus,
+.footer-links li a:hover,
+.footer-links li a:active {
+    text-decoration: none;
+    color: rgba(250, 250, 250, 0.75);
+}
+
+.footer-icon-title {
+    font-size: 28px;
+}
+
+.btn-icon {
+    margin-left: 1rem;
+    width: 40px;
+    height: 40px;
+    border: none;
+    border-radius: 50%;
+    background-color: #606c30;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: 0.5s ease-out;
+}
+
+.btn-icon:focus,
+.btn-icon:hover,
+.btn-icon:active {
+    width: 45px;
+    height: 45px;
+    background-color: #4b5a02;
+    outline: none;
+    color: rgba(250, 250, 250, 0.7);
+}
+
+.footer-icon a {
+    transition: 0.5s ease-out;
+}
+
+.footer-icon a:focus,
+.footer-icon a:hover,
+.footer-icon a:active {
+    padding-top: 0.8rem!important;
+}
+
+hr.socket {
+    border-top: 0.2rem solid rgba(250, 250, 250, 0.7);
+    width: 100%;
+}
+
+.footer-note {
+    font-size: 20px;
+    height: 50px;
+}
+
+
+/*Media Queries*/
+
+@media only screen and (min-width: 768px) {
+    #form {
+        margin: 3rem 7rem;
+        padding: 3rem 2rem 1rem;
+    }
+}
+
+@media only screen and (min-width: 960px) {
+    #form {
+        margin: 3rem 2rem;
+    }
 }
